main.css
html {
  background: url(img/background_morning_blur.png) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.element {
  -webkit-backdrop-filter: blur(10px) brightness(1.2) contrast(0.3);
}

#facebook-num, #twitter-num, #yelp-num, #to-add {
  width: 85px;
  height: 165px;
  box-shadow: none;
  margin: 0;
}

#facebook-num {
  margin-left: 20px;
  background-color: rgba(54, 88, 153, .6);
}

#facebook-num:hover {
  background-color: #3B5998;
  outline: none;
}

#twitter-num {
  background-color: rgba(29, 161, 242, .6);
}

#twitter-num:hover {
  background-color: #1DA1F2;
  outline: none;
}

#yelp-num {
  background-color: rgba(169, 18, 0, .6);
}

#yelp-num:hover {
  background-color: #C41200;
  outline: none;
}

#to-add {
  background-color: rgba(0, 0, 0, .5);
}

#to-add:hover {
  background-color: rgba(0, 0, 0, .7);
  /*color: #000;*/
  outline: none;
}

.social-num {
  display: flex !important;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  color: white;
  font-size: 12px;
  font-family: "open sans";
  font-weight: lighter;
  padding: 20px 10px 5px;
}

.custom-icon {
  width: 40px;
  height: 40px;
  background-color: white;
}

.facebook-icon {
  -webkit-mask-image: url('img/facebook_icon.svg');
  mask-image: url('img/facebook_icon.svg');
}

.twitter-icon {
  -webkit-mask-image: url('img/twitter_icon.svg');
  mask-image: url('img/twitter_icon.svg');
}

.yelp-icon {
  -webkit-mask-image: url('img/yelp_icon.svg');
  mask-image: url('img/yelp_icon.svg');

}

.add-icon {
  -webkit-mask-image: url('img/add_icon.svg');
  mask-image: url('img/add_icon.svg');
}

.square {
  width: 157px !important;
  height: 165px !important;
  margin: 0 !important;
  box-shadow: none !important;
}

.square:hover {
  outline: none !important;
}

#pro-tips {
  height: 165px;
  width: 517px;
  left: -5px;
  margin-top: 20px;
}

#pro-tips:hover {
  outline: none;
}

#hero {
  width: 875px;
  height: 351px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-size: cover;
  background-image: url('img/background_morning.png');
}

#herotime{
  color: white;
  font-weight: bold;
  font-size:100px;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
}

#to-dos {
  width: 162px;
  height: 351px;
  margin: 0;
  margin-left: -10px;
  /*background-image: url("img/todo_background.png");*/
  background-color: rgba(0, 0, 0, .3);
  box-shadow: none;
  color: white;
  text-align: center;
  padding-top: 20px;
}

#to-dos:hover {
  outline: none;
}

#myList{
  list-style:none;
  padding-left:15px;
}

#myList li{
  text-align: left;
}

#to-dos .button{
  height:15px;
  width:15px;
  min-width:15px;
  background-color: rgba(0,0,0,0);
  color: rgba(0,0,0,0);
  border:rgba(0,0,0,0);
  font-size:3px;
}

#to-dos .button:hover{
  background-color: rgba(0,0,0,0);
  color: white;
  border: 1px white solid;
}

#to-dos span{
  display:inline-block;
  margin: 5px 10px;
}

#to-dos span.completed{
  text-decoration: line-through;
}

#upper {
  display: flex;
  justify-content: center;
  margin-top: 40px;
}

#review-loader {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 130px;
}

.review-line1 {
    height: 35px;
    width: 100%;
    display: flex;
    align-items: center;
}

.review-avatar {
    height: 35px;
    width: 35px;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    font-size: 12px;
    font-weight: bold;
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
}

.lower {
  display: flex;
  justify-content: center;
  padding-left: 70px;
}

#review-tile {
  background-color: rgba(255, 255, 255, .2);
  width: 345px;
  height: 350px;
  box-shadow: none;
  margin: 0 20px !important;
}

#review-tile:hover {
  outline: none;
}

#add-on {
  margin-top: 20px !important;
}

.flare {
  cursor: pointer;
  /*opacity: .9;*/
  transition: all .2s ease;
}

#tile-square {
  margin-left: 5px !important;
}

.flare:hover {
  /*opacity: 1;*/
  outline: none;
}

#pokemon {
  margin-top: 20px;
  cursor: pointer;
  /*opacity: .9;*/
  transition: all .2s ease;

  width: 157px !important;
  height: 165px !important;

  box-shadow: none !important;
}

#pokemon:hover {
  /*opacity: 1;*/
  outline: none !important;
}

.greeting {
  color: white;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 300;
  font-size: 24px;
  margin: 0;
}

.review-author {
  margin-left: 10px;
  color: black;
}

.profile-pic {
  width: 32px;
  height: 32px;
  display: inline;
  align-items: center;
  justify-content: center;
}

#latest-reviews-content {
  overflow-x: hidden;
  float: left;
  height: 310px;
  overflow: auto;
  padding-top: 12px;
  background-color: rgba(255, 255, 255, .9);
}

.review-content {
  padding: 15px 25px;
  font-size: 12px;
  color: #9B9B9B;
}

.review-comment {
  margin-top: 5px;
}

.review-highlight {
  font-weight: bold;
}

/*.reviews-list:nth-child(even) {
    background-color: #CCC;
}*/

#scriptBox {
  width: 80%;
  -webkit-transition: border-color .2s ease;
  margin: 0 auto;
  display: block;
  background: 0;
  border: 0;
  border-bottom: 2px solid #fff;
  color: #fff;
  font-weight: 300;
  outline: 0;
  text-align: center;
  font-size: 14px;
  line-height: 120%;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.news-image {
  max-width: 56%;
  display: inline!important;
  float: left;
}

.news-title-container {
  /*float: left;*/
  /*display: inline;*/
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: auto;
  float: right:
}

.news-title {
  color: black;
  font-weight: 600;
  font-size: 20px;
  margin-left: 20px;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
}

.bottom-label {
  margin-left: 10px;
}

.fix {
  margin-bottom: 5px;
  color: white;
}

.reply-btn {
  background: transparent;
  color: red;
  border: 1px solid red;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  text-decoration: none;
  opacity: .7;
  margin-right: 20px;
  margin-top: 5px;
  /*padding-left: 12px;
  padding-right: 12px;*/
}

.reply-btn:hover {
  opacity: 1;
  background-color: red;
  color: white;
}

.carousel-switch-next {
  font-size: 35px !important;
  margin-right: 10px !important;
}

.carousel-switch-prev {
  font-size: 35px !important;
  margin-left: 10px !important;
}

#flare-back {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  width: 157px !important;
  height: 165px !important;
  margin: 0 !important;
  box-shadow: none !important;
}

.custom-icon:hover, span.icon:hover {
    -webkit-animation-name: spin;
    -webkit-animation-duration: 4000ms;
    -webkit-animation-iteration-count: infinite;
    -webkit-animation-timing-function: linear;
    -moz-animation-name: spin;
    -moz-animation-duration: 4000ms;
    -moz-animation-iteration-count: infinite;
    -moz-animation-timing-function: linear;
    -ms-animation-name: spin;
    -ms-animation-duration: 4000ms;
    -ms-animation-iteration-count: infinite;
    -ms-animation-timing-function: linear;

    animation-name: spin;
    animation-duration: 4000ms;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
}
@-ms-keyframes spin {
    from { -ms-transform: rotate(0deg); }
    to { -ms-transform: rotate(360deg); }
}
@-moz-keyframes spin {
    from { -moz-transform: rotate(0deg); }
    to { -moz-transform: rotate(360deg); }
}
@-webkit-keyframes spin {
    from { -webkit-transform: rotate(0deg); }
    to { -webkit-transform: rotate(360deg); }
}
@keyframes spin {
    from {
        transform:rotate(0deg);
    }
    to {
        transform:rotate(360deg);
    }
}

#email {
  opacity: .9;
  cursor: pointer;
  transition: all .2s ease;
}

#email:hover {
  opacity: 1;
}

